[package]
name = "dserve"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.35"
ring = "0.17.8"
serde = { version = "1.0.217",  features = ["derive"] }

[lib]
name = "dserve"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "game_server"
path = "src/game_server/server.rs"
